Dashboard- Recent Orders

--- a/frontend/src/app/dashboard/dashboard.component.html
+++ b/frontend/src/app/dashboard/dashboard.component.html
@@ -1,6 +1,12 @@
 <!-- <app-recent-orders></app-recent-orders> -->
+<div>
+<div class="container recent-orders">
 
+  <app-recent-orders>
+
+  </app-recent-orders>
+</div>
 <div class="container statistics-container">
     <app-statistics></app-statistics>
   </div>
-
+</div>
