--- a/frontend/src/app/dashboard/dashboard.component.scss
+++ b/frontend/src/app/dashboard/dashboard.component.scss
@@ -2,3 +2,8 @@
     width: 50%; /* Adjust this to make the component smaller */
     float: right; /* This will move the component to the right side of the page */
   }
+
+  .recent-orders {
+    width: 100%; /* Adjust this to make the component smaller */
+    float: left; /* This will move the component to the right side of the page */
+  }
