--- a/frontend/src/app/dashboard/recent-orders/recent-orders.component.html
+++ b/frontend/src/app/dashboard/recent-orders/recent-orders.component.html
@@ -1,2 +1,27 @@
 <h1>Kürzliche Bestellungen</h1>
-
+<table class="table table-hover">
+  <thead>
+    <tr>
+      <th scope="col">ID</th>
+      <th scope="col">Kunde</th>
+      <th scope="col">Datum</th>
+      <th scope="col">Menge</th>
+      <th scope="col">Status</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr *ngFor="let order of recentOrders()">
+      <td>
+        {{ order.id }}
+      </td>
+      <td>
+        {{ order.customerId }}
+      </td>
+      <td>{{ order.date | date:'dd.MM.yyyy HH:mm' }}</td>
+      <td>{{ order.amount }} kg</td>
+      <td>
+        {{ order.paidStatus === "false" ? "Nicht bezahlt" : "Bezahlt" }}
+      </td>
+    </tr>
+  </tbody>
+</table>
