selectedCategory shown + stock can be updated not just added

--- a/frontend/src/app/dashboard/dashboard.component.html
+++ b/frontend/src/app/dashboard/dashboard.component.html
@@ -1,12 +1,15 @@
 <!-- <app-recent-orders></app-recent-orders> -->
 <div>
-<div class="container recent-orders">
-
-  <app-recent-orders>
-
-  </app-recent-orders>
-</div>
-<div class="container statistics-container">
+  <div class="container recent-orders">
+    <app-recent-orders> </app-recent-orders>
+  </div>
+  <div class="container statistics-container">
     <app-statistics></app-statistics>
   </div>
+
+  <!-- schnell eine bestellung hinzufügen
+        öffnet automatisch aktuellsten SalesDay
+        sodass direkt eine Bestellung hinzugefügt 
+        werden kann
+  -->
 </div>
