--- a/frontend/src/app/sales-day/sales-day.component.html
+++ b/frontend/src/app/sales-day/sales-day.component.html
@@ -128,6 +128,11 @@
         <td>{{dataService.getMeatPieceFromID(order.meatPieceId!)?.name}}</td>
         <td>{{order.amount}}</td>
         <td>{{order.notes}}</td>
+        <td>
+          <button class="btn btn-danger" (click)="deleteOrder(order)">
+            -
+          </button>
+        </td>
       </tr>
     </tbody>
   </table>
