--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,56 +1,14 @@
+
+  
+
 <div class="conOverview">
-  <div class="sidebar">
-    <!-- Your existing div with specific styles -->
-    <div style="padding-top: 140px; padding-left: 30px; 
-    padding-right: 46px; background: #060606; flex-direction: column; justify-content: 
-    flex-start; align-items: flex-start; gap: 60px; display: inline-flex; color: white; position: relative;">
-      <!-- Content of the sidebar -->
-      <a style="font-size: 20px;" (click)="handleNavLinkClick('innviertlerGauchos')"
-        [class.active-link]="activeLink === 'innviertlerGauchos'" class="nav-link" href="#">
-        Innviertler Gauchos
-      </a>
+    <app-navbar class="sidebar">
 
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" (click)="handleNavLinkClick('dashboard')"
-            [class.active-link]="activeLink === 'dashboard'">
-            <mat-icon>dashboard</mat-icon>
-            Dashboard
-          </a>
-        </li>
-        <li class="nav-item">
-          <a (click)="handleNavLinkClick('home')" [class.active-link]="activeLink === 'home'" class="nav-link">
-            <mat-icon>home</mat-icon>
-            Home
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" (click)="handleNavLinkClick('salesDays')"
-            [class.active-link]="activeLink === 'salesDays'">
-            <mat-icon>calendar_today</mat-icon>
-            Verkaufstage
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" (click)="handleNavLinkClick('customers')"
-            [class.active-link]="activeLink === 'customers'">
-            <mat-icon>person</mat-icon>
-            Kunden
-          </a>
-        </li>
-
-        <li class="nav-item">
-          <a class="nav-link" (click)="handleNavLinkClick('stockOverview')"
-            [class.active-link]="activeLink === 'stockOverview'">
-            <mat-icon>person</mat-icon>
-            Fleischbestand
-          </a>
-        </li>
-      </ul>
-    </div>
-  </div>
+    </app-navbar>
   <div class="main-content">
     <!-- This is where the router outlet will be placed -->
     <router-outlet></router-outlet>
   </div>
 </div>
+
+
