--- a/frontend/src/app/dashboard/dashboard.component.html
+++ b/frontend/src/app/dashboard/dashboard.component.html
@@ -1,5 +1,5 @@
 <!-- <app-recent-orders></app-recent-orders> -->
-<div>
+<div class="dashboardDiv">
   <div class="container recent-orders">
     <app-recent-orders> </app-recent-orders>
   </div>
