--- a/frontend/src/app/dashboard/statistics/statistics.component.html
+++ b/frontend/src/app/dashboard/statistics/statistics.component.html
@@ -21,7 +21,7 @@
       <div class="card card-red">
         <div class="card-icon">💰</div>
         <div class="card-title">Umsatz</div>
-        <div class="card-value">$6,260</div>
+        <div class="card-value">{{revenue}}€</div>
         <div class="card-change card-increase">↑7.1%</div>
       </div>
       <div class="card card-green">
