--- a/frontend/src/app/customers/customers.component.html
+++ b/frontend/src/app/customers/customers.component.html
@@ -28,7 +28,7 @@
 
       <tr *ngFor="let customer of dataService.customers()">
         <th scope="row">{{customer.id}}</th>
-        <td>
+        <td (click)="moveToSingleCustomer(customer)">
           <form>
             <div class="form-group">
               <!-- <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email"> -->
