--- a/frontend/src/app/dashboard/dashboard.component.scss
+++ b/frontend/src/app/dashboard/dashboard.component.scss
@@ -7,3 +7,14 @@
     width: 100%; /* Adjust this to make the component smaller */
     float: left; /* This will move the component to the right side of the page */
   }
+
+  .dashboardDiv {
+    display: flex;
+    justify-content: space-between;
+  
+    .recent-orders,
+    .statistics-container {
+      flex: 1;
+      margin: 0 10px;
+    }
+  }
