--- a/frontend/src/app/dashboard/recent-orders/recent-orders.component.html
+++ b/frontend/src/app/dashboard/recent-orders/recent-orders.component.html
@@ -7,6 +7,8 @@
       <th scope="col">Kategorie</th>
       <th scope="col">Datum</th>
       <th scope="col">Menge</th>
+      <th scope="col">Preis</th>
+      <th scope="col">Pfand</th>
       <th scope="col">Status</th>
     </tr>
   </thead>
@@ -21,6 +23,8 @@
       <td>Kategorie to do</td>
       <td>{{ order.date | date : "dd.MM.yyyy HH:mm" }}</td>
       <td>{{ order.amount }} kg</td>
+      <td>{{ order.price }} €</td>
+      <td>{{ order.deposit }} €</td>
       <td>
         {{ order.paidStatus === "false" ? "Nicht bezahlt" : "Bezahlt" }}
       </td>
