--- a/frontend/src/app/sales-day/sales-day.component.scss
+++ b/frontend/src/app/sales-day/sales-day.component.scss
@@ -62,6 +62,12 @@ th .btn-link {
 #quantity {
     width: 5em;
 }
+#deposit {
+    width: 5em;
+}
+#price {
+    width: 5em;
+}
 
 .dropdown-submenu {
     position: relative;
