--- a/frontend/src/app/customers/single-customer/single-customer.component.html
+++ b/frontend/src/app/customers/single-customer/single-customer.component.html
@@ -2,12 +2,13 @@
 <table  class="table table-hover">
     <thead>
         <tr>
-            <th>ID</th>
-            <th>Kategorie</th>
-            <th>Menge (kg)</th>
-            <th>Preis (€)</th>
-            <th>Pfand (€)</th>
-            <th>Anmerkung</th>
+            <th class="header">ID</th>
+            <th class="header">Kategorie</th>
+            <th class="header">Menge (kg)</th>
+            <th class="header">Preis (€)</th>
+            <th class="header">Pfand (€)</th>
+            <th class="header">Anmerkung</th>
+            <th class="header"></th>
         </tr>
     </thead>
     <tbody>
