--- a/frontend/src/app/dashboard/recent-orders/recent-orders.component.html
+++ b/frontend/src/app/dashboard/recent-orders/recent-orders.component.html
@@ -2,14 +2,14 @@
 <table class="table table-hover">
   <thead>
     <tr>
-      <th scope="col">ID</th>
-      <th scope="col">Kunde</th>
-      <th scope="col">Kategorie</th>
-      <th scope="col">Datum</th>
-      <th scope="col">Menge</th>
-      <th scope="col">Preis</th>
-      <th scope="col">Pfand</th>
-      <th scope="col">Status</th>
+      <th class="header" scope="col">ID</th>
+      <th class="header" scope="col">Kunde</th>
+      <th class="header" scope="col">Kategorie</th>
+      <th class="header" scope="col">Datum</th>
+      <th class="header" scope="col">Menge</th>
+      <th class="header" scope="col">Preis</th>
+      <th class="header" scope="col">Pfand</th>
+      <th class="header" scope="col">Status</th>
     </tr>
   </thead>
   <tbody>
