--- a/frontend/src/app/sales-day/sales-day.component.scss
+++ b/frontend/src/app/sales-day/sales-day.component.scss
@@ -53,6 +53,12 @@ th .btn-link {
     color: black !important;
 }
 
+//Table Header Orange
+.header {
+    background-color: orange;
+    color: white;
+} 
+
 //keine Ahnung
 #category-button,
 #notes {
