--- a/frontend/src/app/sales-day/sales-day.component.html
+++ b/frontend/src/app/sales-day/sales-day.component.html
@@ -49,19 +49,19 @@
   <table id="table" class="table table-hover">
     <thead>
       <tr>
-        <th scope="col" (click)="sortBy('#')">ID <button class="btn btn-link"
+        <th class="header" scope="col" (click)="sortBy('#')">ID <button class="btn btn-link"
             (click)="toggleSortDirection('#')">{{getSortIcon('#')}}</button></th>
-        <th scope="col" (click)="sortBy('Kategorie')">Kategorie <button class="btn btn-link"
+        <th class="header" scope="col" (click)="sortBy('Kategorie')">Kategorie <button class="btn btn-link"
             (click)="toggleSortDirection('Kategorie')">{{getSortIcon('Kategorie')}}</button></th>
-        <th scope="col" (click)="sortBy('Menge')">Menge (kg) <button class="btn btn-link"
+        <th class="header" scope="col" (click)="sortBy('Menge')">Menge (kg) <button class="btn btn-link"
             (click)="toggleSortDirection('Menge')">{{getSortIcon('Menge')}}</button></th>
-            <th scope="col" (click)="sortBy('Menge')">Preis (€) <button class="btn btn-link"
-              (click)="toggleSortDirection('Preis')"></button></th>
-              <th scope="col" (click)="sortBy('Menge')">Pfand (€) <button class="btn btn-link"
-                (click)="toggleSortDirection('Pfand')"></button></th>
-        <th scope="col" (click)="sortBy('Anmerkung')">Anmerkung <button class="btn btn-link"
+        <th class="header" scope="col" (click)="sortBy('Menge')">Preis (€) <button class="btn btn-link"
+            (click)="toggleSortDirection('Preis')"></button></th>
+        <th class="header" scope="col" (click)="sortBy('Menge')">Pfand (€) <button class="btn btn-link"
+            (click)="toggleSortDirection('Pfand')"></button></th>
+        <th class="header" scope="col" (click)="sortBy('Anmerkung')">Anmerkung <button class="btn btn-link"
             (click)="toggleSortDirection('Anmerkung')">{{getSortIcon('Anmerkung')}}</button></th>
-       
+        <th class="header"></th>
       </tr>
     </thead>
     <tbody>
@@ -70,8 +70,8 @@
         <td>
           <div dropdown class="d-inline-block">
             <div class="dropdown">
-              <button  class="btn btn-secondary dropdown-toggle" type="button"
-                id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+              <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1"
+                data-bs-toggle="dropdown" aria-expanded="false">
                 {{selectedMeatPiece.name && selectedMeatPiece.name!.length > 1 ? selectedMeatPiece.name : 'Auswählen'}}
 
               </button>
@@ -95,7 +95,6 @@
             </div>
           </div>
         </td>
-
         <td>
           <input [(ngModel)]="quantity" type="number" class="form-control" id="quantity" min="0" placeholder="0.0">
         </td>
