--- a/frontend/src/app/navbar/navbar.component.html
+++ b/frontend/src/app/navbar/navbar.component.html
@@ -1,51 +1,48 @@
 <div class="sidebar">
-    <!-- Your existing div with specific styles -->
-    <div style=" padding-left: 30px; 
+  <!-- Your existing div with specific styles -->
+  <div style=" padding-left: 30px; 
     padding-right: 46px; flex-direction: column; justify-content: 
     flex-start;  gap: 60px;  color: #404142ff; position: relative;">
-      <!-- Content of the sidebar -->
+    <!-- Content of the sidebar -->
 
-      <a  style="font-size: 20px;" (click)="handleNavLinkClick('innviertlerGauchos')"
-        [class.active-link]="activeLink === 'innviertlerGauchos'" class="nav-link" href="#">
-        Innviertler Gauchos
-      </a>
+    <a class="nav-link" id="innviertlerFauchos" (click)="handleNavLinkClick('innviertlerGauchos')"
+      [class.active-link]="activeLink === 'innviertlerGauchos'">
+      Innviertler Gauchos
+    </a>
 
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" (click)="handleNavLinkClick('dashboard')"
-            [class.active-link]="activeLink === 'dashboard'">
-            <mat-icon>dashboard</mat-icon>
-            Dashboard
-          </a>
-        </li>
-        <li class="nav-item">
-          <a (click)="handleNavLinkClick('home')" [class.active-link]="activeLink === 'home'" class="nav-link">
-            <mat-icon>home</mat-icon>
-            Home
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" (click)="handleNavLinkClick('salesDays')"
-            [class.active-link]="activeLink === 'salesDays'">
-            <mat-icon>calendar_today</mat-icon>
-            Verkaufstage
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" (click)="handleNavLinkClick('customers')"
-            [class.active-link]="activeLink === 'customers'">
-            <mat-icon>person</mat-icon>
-            Kunden
-          </a>
-        </li>
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link" (click)="handleNavLinkClick('dashboard')" [class.active-link]="activeLink === 'dashboard'">
+          <mat-icon>dashboard</mat-icon>
+          Dashboard
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" (click)="handleNavLinkClick('home')" [class.active-link]="activeLink === 'home'">
+          <mat-icon>home</mat-icon>
+          Home
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" (click)="handleNavLinkClick('salesDays')" [class.active-link]="activeLink === 'salesDays'">
+          <mat-icon>calendar_today</mat-icon>
+          Verkaufstage
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" (click)="handleNavLinkClick('customers')" [class.active-link]="activeLink === 'customers'">
+          <mat-icon>person</mat-icon>
+          Kunden
+        </a>
+      </li>
 
-        <li class="nav-item">
-          <a class="nav-link" (click)="handleNavLinkClick('stockOverview')"
-            [class.active-link]="activeLink === 'stockOverview'">
-            <mat-icon>person</mat-icon>
-            Fleischbestand
-          </a>
-        </li>
-      </ul>
-    </div>
+      <li class="nav-item">
+        <a class="nav-link" (click)="handleNavLinkClick('stockOverview')"
+          [class.active-link]="activeLink === 'stockOverview'">
+          <mat-icon>book</mat-icon>
+          Fleischbestand
+        </a>
+      </li>
+    </ul>
   </div>
+</div>
