--- a/frontend/src/app/navbar/navbar.component.scss
+++ b/frontend/src/app/navbar/navbar.component.scss
@@ -12,6 +12,7 @@
   margin-top: 300px; //muss noch geändert werden von px auf responsive wert
   margin-bottom: auto;
 }
+
 .nav-item {
   width: 100%;
 }
@@ -24,7 +25,13 @@
   align-items: center;
   padding: 17px;
 }
+
 .active-link {
   color: #fcaf00ff;
   border-right: 2px solid #fcaf00ff;
+}
+
+//innviertlerFauchos Header oben Links
+#innviertlerFauchos {
+  font-size: 20px;
 }
