--- a/frontend/src/app/navbar/navbar.component.html
+++ b/frontend/src/app/navbar/navbar.component.html
@@ -1,15 +1,13 @@
 <div class="sidebar">
-  <!-- Your existing div with specific styles -->
-  <div style=" padding-left: 30px; 
-    padding-right: 46px; flex-direction: column; justify-content: 
-    flex-start;  gap: 60px;  color: #404142ff; position: relative;">
-    <!-- Content of the sidebar -->
+  <div id="navBarAlignment">
 
+    <!--Navbar Header-->
     <a class="nav-link" id="innviertlerFauchos" (click)="handleNavLinkClick('innviertlerGauchos')"
       [class.active-link]="activeLink === 'innviertlerGauchos'">
       Innviertler Gauchos
     </a>
 
+    <!--NavBar Menu-->
     <ul class="navbar-nav">
       <li class="nav-item">
         <a class="nav-link" (click)="handleNavLinkClick('dashboard')" [class.active-link]="activeLink === 'dashboard'">
@@ -35,7 +33,6 @@
           Kunden
         </a>
       </li>
-
       <li class="nav-item">
         <a class="nav-link" (click)="handleNavLinkClick('stockOverview')"
           [class.active-link]="activeLink === 'stockOverview'">
@@ -43,6 +40,7 @@
           Fleischbestand
         </a>
       </li>
+      
     </ul>
   </div>
 </div>
