--- a/frontend/src/app/navbar/navbar.component.scss
+++ b/frontend/src/app/navbar/navbar.component.scss
@@ -2,13 +2,28 @@
   font-family: Poppins;
   flex-direction: column;
   align-items: center;
-
   display: flex;
+}
+
+//innviertlerFauchos Header oben Links
+#innviertlerFauchos {
+  font-size: 20px;
+}
+
+//Ausrichtung von NavBar items
+#navBarAlignment {
+  padding-left: 30px;
+  padding-right: 30px;
+  flex-direction: column;
+  justify-content:
+    flex-start;
+  gap: 60px;
+  color: #404142ff;
+  position: relative;
 }
 
 .navbar-nav {
   width: 100%;
-
   margin-top: 300px; //muss noch geändert werden von px auf responsive wert
   margin-bottom: auto;
 }
@@ -28,10 +43,6 @@
 
 .active-link {
   color: #fcaf00ff;
-  border-right: 2px solid #fcaf00ff;
-}
-
-//innviertlerFauchos Header oben Links
-#innviertlerFauchos {
-  font-size: 20px;
+  margin-right: -13%;
+  border-right: 3px solid #fcaf00ff;
 }
