--- a/frontend/src/app/customers/customers.component.scss
+++ b/frontend/src/app/customers/customers.component.scss
@@ -2,4 +2,16 @@
 .header {
     background-color: orange;
     color: white;
-} 
+}
+
+//Horizontal und Vertikal Centered Table Infos
+th {
+    text-align: center;
+    vertical-align: middle;
+}
+
+//Horizontal und Vertikal Centered Table Infos
+td {
+    text-align: center;
+    vertical-align: middle;
+}
