--- a/frontend/src/app/sales-day/sales-day.component.scss
+++ b/frontend/src/app/sales-day/sales-day.component.scss
@@ -2,7 +2,7 @@
 #kunde-wrapper {
     display: flex;
     align-items: center;
-
+    margin-bottom: 10px;
     #kunde-label {
         margin-right: 2%;
     }
