Druckfunktion Dashboard & Sales Day gefixt

--- a/frontend/src/app/dashboard/recent-orders/recent-orders.component.html
+++ b/frontend/src/app/dashboard/recent-orders/recent-orders.component.html
@@ -1,4 +1,12 @@
-<h1>Kürzliche Bestellungen</h1>
+<div id="DivHeader">
+  <h1>Kürzliche Bestellungen</h1>
+  <div id="save-file-button" (click)="exportButtonClick()">
+    <button>
+      <mat-icon>local_printshop</mat-icon>
+    </button>
+  </div>
+</div>
+
 <table class="table table-hover">
   <thead>
     <tr>
