customers page fixed

--- a/frontend/src/app/customers/customers.component.html
+++ b/frontend/src/app/customers/customers.component.html
@@ -18,7 +18,7 @@
         <input class="form-control" placeholder="Addresse" #newAddress type="text">
       </td>
       <td colspan="2">
-        <button class="btn btn-success"
+        <button id="addButton" class="btn btn-success"
           (click)="createCustomerFromInput(newName.value, newAddress.value)">Hinzufügen</button>
       </td>
     </tr>
