--- a/frontend/src/app/dashboard/statistics/statistics.component.html
+++ b/frontend/src/app/dashboard/statistics/statistics.component.html
@@ -25,7 +25,7 @@
       <div class="card card-green">
         <div class="card-icon">👛</div>
         <div class="card-title">Einnahmen</div>
-        <div class="card-value">$2,567</div>
+        <div class="card-value">.....</div>
       </div>
     </div>
   </div>
