--- a/frontend/src/app/dashboard/dashboard.component.scss
+++ b/frontend/src/app/dashboard/dashboard.component.scss
@@ -1,20 +1,20 @@
 .statistics-container {
-    width: 50%; /* Adjust this to make the component smaller */
-    float: right; /* This will move the component to the right side of the page */
-  }
+  width: 50%;
+  float: right;
+}
 
-  .recent-orders {
-    width: 100%; /* Adjust this to make the component smaller */
-    float: left; /* This will move the component to the right side of the page */
-  }
+.recent-orders {
+  width: 100%;
+  float: left;
+}
 
-  .dashboardDiv {
-    display: flex;
-    justify-content: space-between;
-  
-    .recent-orders,
-    .statistics-container {
-      flex: 1;
-      margin: 0 10px;
-    }
+.dashboardDiv {
+  display: flex;
+  justify-content: space-between;
+
+  .recent-orders,
+  .statistics-container {
+    flex: 1;
+    margin: 0 10px;
   }
+}
