--- a/frontend/src/app/sales-day-info/sales-day-info.component.html
+++ b/frontend/src/app/sales-day-info/sales-day-info.component.html
@@ -1,12 +1,14 @@
-<div  class="col">
+<div class="col">
   <div class="card h-100">
-    <img src="https://img.freepik.com/free-vector/abstract-minimal-white-background_23-2148887988.jpg?w=1060&t=st=1703333894~exp=1703334494~hmac=15f68c3ce86ae1f129e08e4148d966eaec36058ed117495411fdd35e1383862f" class="card-img-top" alt="...">
+    <img
+      src="https://img.freepik.com/free-vector/abstract-minimal-white-background_23-2148887988.jpg?w=1060&t=st=1703333894~exp=1703334494~hmac=15f68c3ce86ae1f129e08e4148d966eaec36058ed117495411fdd35e1383862f"
+      class="card-img-top" alt="...">
     <div class="card-body">
       <h5 class="card-title">{{salesDay.name}}</h5>
       <p class="card-text">{{salesDay.dateString | date: 'dd.MM.yyyy'}}</p>
-            <div style="display: flex;justify-content: space-between;">
+      <div style="display: flex;justify-content: space-between;">
         <button (click)="salesDayClicked(salesDay)" class="btn btn-secondary">Verkaufstag bearbeiten</button>
-        <button  class="btn btn-danger"data-bs-toggle="modal" data-bs-target="#exampleModal">
+        <button class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#exampleModal">
           Löschen
         </button>
       </div>
@@ -24,12 +26,12 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        Möchtest du diesen Verkaufstag wirklich löschen?  
-
+        Möchtest du diesen Verkaufstag wirklich löschen?
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Abbrechen</button>
-        <button (click)="deleteClicked()" type="button" data-bs-dismiss="modal" class="btn btn-danger">Verkaufstag löschen</button>
+        <button (click)="deleteClicked()" type="button" data-bs-dismiss="modal" class="btn btn-danger">Verkaufstag
+          löschen</button>
       </div>
     </div>
   </div>
