--- a/frontend/src/app/create-sales-day/create-sales-day.component.html
+++ b/frontend/src/app/create-sales-day/create-sales-day.component.html
@@ -1,36 +1,30 @@
 <head>
-   
-
     <style>
         body {
-           margin-left: 10px;
+            margin-left: 10px;
         }
     </style>
 </head>
+
 <body>
     <h1 style="margin-top: 10px;"> Neuen Verkaufstag anlegen:</h1>
-    
-        
-        <br>
-        <h4>Name:
-            <input #txtName placeholder="(optional)" type="text">
-        </h4>
-        <h4>Datum:
-            <mat-form-field>
-                <mat-label>Choose a date</mat-label>
-                <input matInput [matDatepicker]="picker"
-                (dateInput)="addEvent('input', $event)">
-                <mat-hint>MM/DD/YYYY</mat-hint>
-                <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
-                <mat-datepicker #picker></mat-datepicker>
-              </mat-form-field>
 
-        </h4>
+    <br>
+    <h4>Name:
+        <input #txtName placeholder="(optional)" type="text">
+    </h4>
+    <h4>Datum:
+        <mat-form-field>
+            <mat-label>Choose a date</mat-label>
+            <input matInput [matDatepicker]="picker" (dateInput)="addEvent('input', $event)">
+            <mat-hint>MM/DD/YYYY</mat-hint>
+            <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+            <mat-datepicker #picker></mat-datepicker>
+        </mat-form-field>
+    </h4>
 
-        <h4>
-            <button *ngIf="createSalesDayEnabled"  (click)="createSalesDayClicked(txtName.value)" class="btn btn-primary">Verkaufstag anlegen</button>
-        </h4>
-   
+    <h4>
+        <button *ngIf="createSalesDayEnabled" (click)="createSalesDayClicked(txtName.value)"
+            class="btn btn-primary">Verkaufstag anlegen</button>
+    </h4>
 </body>
-
-
