--- a/frontend/src/app/sales-day/sales-day.component.scss
+++ b/frontend/src/app/sales-day/sales-day.component.scss
@@ -3,6 +3,7 @@
     display: flex;
     align-items: center;
     margin-bottom: 10px;
+
     #kunde-label {
         margin-right: 2%;
     }
@@ -74,7 +75,7 @@ td {
 //Keine Ahnung
 #category-button,
 #notes {
-    height: 10px; // Setzen Sie die Höhe auf den gewünschten Wert
+    height: 10px;
 }
 
 #quantity {
@@ -106,18 +107,20 @@ li.dropdown-menu {
     margin: 0 !important;
 }
 
-//keine Ahnung
+//rest
 #category-button,
 #notes {
-    height: 10px; // Setzen Sie die Höhe auf den gewünschten Wert
+    height: 10px;
 }
 
 #quantity {
     width: 5em;
 }
+
 #deposit {
     width: 5em;
 }
+
 #price {
     width: 5em;
 }
