--- a/frontend/src/app/sales-day/sales-day.component.scss
+++ b/frontend/src/app/sales-day/sales-day.component.scss
@@ -72,6 +72,16 @@ td {
     vertical-align: middle;
 }
 
+//Searchbar Teilstücke
+#searchPartsDiv {
+    margin-right: 2%;
+}
+
+//Searchbar Anmerkung
+#searchNoteDiv {
+    margin-right: 2%;
+}
+
 //Keine Ahnung
 #category-button,
 #notes {
